Добавляет плавующий текст

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="./src/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.18.0/matter.min.js"></script>
   </head>
   <body>
@@ -132,13 +130,27 @@
             <div class="two-screen__pill" draggable="true" style="background-color: #5691F0;" data-color="#5691F0"></div>
           </div>
           <div class="two-screen__floating-text">
-
+            <div class="scrolling-container">
+              <span class="scrolling-text" style="color: #D6F6DD;">CREATE CREATE</span>
+              <span class="scrolling-text" style="color: #F4989C;">CREATE CREATE</span>
+              <span class="scrolling-text" style="color: #ACECF7;">CREATE CREATE</span>
+              <span class="scrolling-text" style="color: #EBD2B4;">CREATE CREATE</span>
+              <span class="scrolling-text" style="color: #D6F6DD;">CREATE CREATE</span>
+              <span class="scrolling-text" style="color: #F4989C;">CREATE CREATE</span>
+            </div>
+            <div class="scrolling-container">
+              <span class="scrolling-text" style="color: #ACECF7;">MOOD MOOD</span>
+              <span class="scrolling-text" style="color: #EBD2B4;">MOOD MOOD</span>
+              <span class="scrolling-text" style="color: #F4989C;">MOOD MOOD</span>
+              <span class="scrolling-text" style="color: #D6F6DD;">MOOD MOOD</span>
+              <span class="scrolling-text" style="color: #ACECF7;">MOOD MOOD</span>
+              <span class="scrolling-text" style="color: #EBD2B4;">MOOD MOOD</span>
+            </div>
           </div>
         </div>
       </section>
       <section class="three-screen">
         <div class="three-screen__top">
-
             <div class="parts-container">
               <div class="bottom-parts">
                   <div class="pill-part bottom-part" style="background-color: #78C850;" data-color="#78C850"></div>
@@ -213,7 +225,6 @@
       </section>
       <section class="four-screen">
         <div id="preview-text">
-          
           <div class="color-flow-text">
             <p class="flow-line">Designed by</p>
             <p class="flow-line">Stabronni Egor</p>
